follow MLs comments

--- a/src/maskrcnn/i.ann.maskrcnn.detect/Makefile
+++ b/src/maskrcnn/i.ann.maskrcnn.detect/Makefile
@@ -1,6 +1,6 @@
 MODULE_TOPDIR = ../../..
 
-PGM = ann.maskrcnn.detect
+PGM = i.ann.maskrcnn.detect
 
 include $(MODULE_TOPDIR)/include/Make/Script.make
 
